Adding support for secure runtime
Signed-off-by: Paulo Lopes <pmlopes@gmail.com>